Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/Selenium_Test_Run__c.object-meta.xml
<CustomObject>
    <description>Created test script for your saved case !!!</description>
    <label>Selenium Test Run</label>
    <nameField>
        <label>Selenium Test Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>