Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Optional Base URL where this test will be run, if Credentials are not specified.</description>
    <inlineHelpText>Optional Base URL where this test will be run, if Credentials are not specified.</inlineHelpText>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>