Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Batch No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>