Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <formula>Org_Credential__r.Environment__r.Name</formula>
    <label>Environment</label>
    <type>Text</type>
</CustomField>