Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Last_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Date__c</fullName>
    <label>Last Status Date</label>
    <summarizedField>Selenium_Test_Result__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Selenium_Test_Result__c.Selenium_Test_Run__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>