Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Copado will log in to Salesforce using this Credential.  There is no need to record username and password of the Salesforce login page.</inlineHelpText>
    <label>Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>SeleniumTestRuns</relationshipName>
    <type>Lookup</type>
</CustomField>