Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Selenium_Settings__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Settings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Copado will run the Test Suites for each of the selected Platforms in these Settings.</inlineHelpText>
    <label>Selenium Settings</label>
    <referenceTo>Selenium_Settings__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>Selenium_Test_Runs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>