Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/fields/Selenium_Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Suite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Selenium Test Suite</label>
    <referenceTo>Selenium_Test_Suite__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>Selenium_Test_Runs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>