Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/recordTypes/Generic_Web_Application.recordType-meta.xml
<RecordType>
    <fullName>Generic_Web_Application</fullName>
    <active>true</active>
    <description>Test a generic web application</description>
    <label>Generic Web Application</label>
</RecordType>