Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <description>Test a Salesforce Org using OAuth Authentication</description>
    <label>Salesforce</label>
</RecordType>