Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/validationRules/Credentials_or_BaseURL.validationRule-meta.xml
<ValidationRule>
    <fullName>Credentials_or_BaseURL</fullName>
    <active>true</active>
    <description>Base url cannot be set if credentials is defined</description>
    <errorConditionFormula>NOT(ISBLANK(Org_Credential__c)) &amp;&amp; NOT(ISBLANK(Base_URL__c))</errorConditionFormula>
    <errorMessage>Base URL cannot be populated if Credentials were selected.</errorMessage>
</ValidationRule>