Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Selenium_Test_Suite__c</columns>
    <columns>Org_Credential__c</columns>
    <columns>Selenium_Settings__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Last_Status_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>